--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Template</title>
+    <title>ClutchWager</title>
   </head>
   <body>
+
+    <video autoplay muted loop id="bgVideo">
+      <source src="/gamer.mp4" type="video/mp4">
+    </video>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
